Fix grid on Firefox

--- a/public/index.css
+++ b/public/index.css
@@ -27,10 +27,8 @@
   max-width: 600px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: auto 70% auto;
+  grid-template-rows: 1fr 4fr 1fr;
   min-height: 98vh;
-  flex-direction: column;
-  justify-content: center;
   border: var(--devsite-content-border);
   background-color: var(--devsite-surface);
 }
